# x2_ik_sdk

./: .gitignore  README.md  pyproject.toml
examples/: offline_demo.py
src/x2_ik_sdk/: __init__.py  cli.py  config.py  ros2_upper_body_node.py  solver.py  trajectory.py
tests/: test_offline_ik.py
