[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "x2-ik-sdk"
version = "0.1.0"
description = "AgiBot X2 upper-arm Pinocchio IK baseline SDK"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pin",
]

[project.scripts]
x2-ik-demo = "x2_ik_sdk.cli:main"
x2-ik-ros2-node = "x2_ik_sdk.ros2_upper_body_node:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
